<?xml version="1.0"?>
<package format="2">
  <name>launch_example</name>
  <version>1.0.0</version>
  <description>The launch_example package</description>

  <maintainer email="lopez.alexander@pucp.edu.pe">Alexander Lopez</maintainer>
  <author email="lopez.alexander@pucp.edu.pe">Alexander Lopez</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
